--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 <body onload="init()">
     <div class="box">
         <div class="glowingBox">
-            <canvas width="650%" height="650%">
+            <canvas width="650px" height="650px">
                 <p>Your browser doesn't support canvas. </p>
             </canvas>
         </div>
 
 
-        <!-- clear button and color picker -->
         <div class="optionbg">
             <div class="option">
                 <h1>Mandala Creator</h1>
